# igmpv3proxy

./: -laqqq  COPYING  Makefile.am  NEWS  config.h  configure.ac  igmpv3proxy.conf  igmpv3proxy.kdev4
.github/workflows/: c-cpp.yml
.kdev4/: igmpv3proxy.kdev4
doc/: Makefile.am  igmpproxy.8.in  igmpproxy.conf.5.in  igmpv3proxy.8.in  igmpv3proxy.conf.5.in
src/: .config.c.swp  .igmp.c.swp  .igmpproxy.c.swp  .igmpproxy.h.swp  .igmpv3.h.swp  .mctable.c.kate-swp  .querier.c.swp  .rttable.c.swo  .rttable.c.swp  .timers.c.kate-swp  Makefile.am  callout.c  cli.c  conf  config.c  confread.c  ifvc.c  igmp.c  igmpproxy.c  igmpproxy.h  igmpv3.h  igmpv3proxy.c  igmpv3proxy.h  kern.c  lib.c  mcgroup.c  mctable.c  mctable.h  mroute-api.c  os-dragonfly.h  os-freebsd.h  os-linux.h  os-netbsd.h  os-openbsd.h  os-qnxnto.h  os-solaris.h  os.h  querier.c  request.c  rttable.c  (+2 more)
